<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="iol_slave_bsp00ue_data" Id="{1425be11-2786-0667-3d84-2c00bd620551}">
    <Declaration><![CDATA[
TYPE
	iol_slave_bsp00ue_data :		STRUCT
	setpoint:						DWORD; 
	switchpoint:					DWORD; 
	measure_unit:					BYTE; 
	max_press:						WORD; 
	min_press:						WORD; 
	switchpoint_delay_on:			WORD; 
	switchpoint_delay_off:			WORD; 
	measure_damping:				WORD; 
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>